# diodem

./: .gitignore  pyproject.toml  readme.md  setup.cfg
.github/workflows/: publish-to-pypi.yml
examples/: validating_enu_reference_frame.ipynb
src/diodem/: __init__.py  _src.py  dataverse_github.py  dataverse_response.json  test_dataverse_github.py  test_src.py  test_utils.py  utils.py
src/diodem/benchmark/: _benchmark.py
src/diodem/benchmark/xmls/: gait.xml
